fixed grid overflow

--- a/style/index.scss
+++ b/style/index.scss
@@ -25,9 +25,10 @@ header {
     @extend .grid-3;
     padding: 8px 16px;
     background: color.$green-lighter;
-
+    
     grid-template-areas: 'a b c';
-    grid-template-columns: 250px auto 250px;
+    grid-template-columns: auto auto auto;
+    gap: 8px;
     justify-items: center;
     align-items: center;
 
